<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg_settings_item"
    android:padding="@dimen/small_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filter posts by mood:"
        android:textColor="@color/color_text_white"
        android:textSize="@dimen/text_size_small"
        android:layout_marginBottom="@dimen/small_margin"/>

    <LinearLayout
        android:id="@+id/ll__mood_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/xsmall_margin"
        android:orientation="horizontal">
        
        <ImageView
            android:layout_width="@dimen/filter_bottom_sheet_icon_size"
            android:layout_height="@dimen/filter_bottom_sheet_icon_size"
            android:src="@drawable/background_tab_layout_selected"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xsmall_margin"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_text_white"
            android:text="@string/mood_all"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mood_sad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/xsmall_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/filter_bottom_sheet_icon_size"
            android:layout_height="@dimen/filter_bottom_sheet_icon_size"
            android:src="@drawable/mood_sad"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xsmall_margin"
            android:layout_gravity="center_vertical"
            android:text="@string/mood_sad"
            android:textColor="@color/color_text_white"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mood_ennui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/xsmall_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/filter_bottom_sheet_icon_size"
            android:layout_height="@dimen/filter_bottom_sheet_icon_size"
            android:src="@drawable/mood_ennui"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xsmall_margin"
            android:layout_gravity="center_vertical"
            android:text="@string/mood_ennui"
            android:textColor="@color/color_text_white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mood_happy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/xsmall_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/filter_bottom_sheet_icon_size"
            android:layout_height="@dimen/filter_bottom_sheet_icon_size"
            android:src="@drawable/mood_happy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xsmall_margin"
            android:layout_gravity="center_vertical"
            android:text="@string/mood_happy"
            android:textColor="@color/color_text_white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mood_raging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/xsmall_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/filter_bottom_sheet_icon_size"
            android:layout_height="@dimen/filter_bottom_sheet_icon_size"
            android:src="@drawable/mood_angry"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xsmall_margin"
            android:layout_gravity="center_vertical"
            android:text="@string/mood_raging"
            android:textColor="@color/color_text_white"/>

    </LinearLayout>

</LinearLayout>